[package]
name = "lp-solvers"
version = "0.0.1"
authors = ["Joel Cavat <jcavat@gmail.com>", "Ophir LOJKINE"]
description = ".lp file format implementation and external solver invocation functions such as CBC, Gurobi, lp_solve, ..."
repository = "https://github.com/rust-or/lp-solvers"
readme = "README.md"
license = "MIT"
keywords = ["linear-programming", "linear-models", "optimization", "solver", "formulation" ]
documentation = "https://docs.rs/lp_solvers"
edition = "2018"

exclude = [
    "src/main.rs",
    "*.yml",
    "*.gitignore",
    "*.log",
    "*.iml",
    ".lp",
    "doc/*",
    "Cargo.lock",
]

[dependencies]
tempfile = "3"
