[package]
name = "lp-solvers"
version = "1.0.1"
authors = ["Joel Cavat <jcavat@gmail.com>", "Ophir LOJKINE"]
description = ".lp file format implementation and external solver invocation for Cbc, Gurobi, cplex, and GLPK"
repository = "https://github.com/rust-or/lp-solvers"
readme = "README.md"
license = "MIT"
keywords = ["linear-programming", "linear-models", "optimization", "solver", "formulation" ]
documentation = "https://docs.rs/lp_solvers"
edition = "2018"

exclude = [
    "src/main.rs",
    "*.yml",
    "*.gitignore",
    "*.log",
    "*.iml",
    ".lp",
    "doc/*",
    "Cargo.lock",
]

[features]
cplex = []

[dependencies]
tempfile = "3"
quick-xml = "0.38"
